--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "i18next": "^23.11.5",
+    "next": "14.2.3",
+    "next-i18n-router": "^5.4.3",
+    "next-i18next": "^15.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-i18next": "^14.1.2"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10"
   }
 }
