--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next-i18next": "^15.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-i18next": "^14.1.2"
+    "react-i18next": "^14.1.2",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
