--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "next-i18n-router": "^5.4.3",
     "next-i18next": "^15.3.0",
     "react": "^18",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18",
     "react-i18next": "^14.1.2",
+    "react-icons": "^5.3.0",
+    "react-player": "^2.16.0",
+    "react-spinners": "^0.14.1",
     "sharp": "^0.33.4"
   },
   "devDependencies": {
