--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^5.3.0",
     "react-player": "^2.16.0",
     "react-spinners": "^0.14.1",
-    "sharp": "^0.33.4"
+    "sharp": "^0.33.4",
+    "sweetalert2": "^11.12.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
