--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-datepicker": "^7.3.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-image-zoom": "^1.3.1",
+    "react-inner-image-zoom": "^3.0.2",
     "react-player": "^2.16.0",
     "react-spinners": "^0.14.1",
     "sharp": "^0.33.4",
