--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "next": "14.2.3",
     "next-i18n-router": "^5.4.3",
     "next-i18next": "^15.3.0",
