--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-image-zoom": "^1.3.1",
     "react-inner-image-zoom": "^3.0.2",
     "react-player": "^2.16.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-spinners": "^0.14.1",
     "sharp": "^0.33.4",
     "sweetalert2": "^11.12.4"
