--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next-i18n-router": "^5.4.3",
     "next-i18next": "^15.3.0",
     "react": "^18",
+    "react-audio-player": "^0.17.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
@@ -21,6 +22,8 @@
     "react-inner-image-zoom": "^3.0.2",
     "react-player": "^2.16.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-responsive-pagination": "^2.7.0",
+    "react-select": "^5.8.0",
     "react-spinners": "^0.14.1",
     "sharp": "^0.33.4",
     "sweetalert2": "^11.12.4"
