--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.0.1",
+    "@mui/x-date-pickers": "^7.15.0",
     "animate.css": "^4.1.1",
+    "dayjs": "^1.11.13",
     "next": "14.2.3",
     "next-i18n-router": "^5.4.3",
     "next-i18next": "^15.3.0",
